--- a/home.html
+++ b/home.html
@@ -99,6 +99,11 @@
       cursor:pointer;
     }
 
+    #customConfirm p {
+      color: #28a745;
+      font-weight: bold;
+    }
+
     @media(max-width:480px){
       .grid-item{font-size:12px;padding:10px;}
       .timetable div{padding:8px 12px;font-size:13px;}
