--- a/home.html
+++ b/home.html
@@ -40,8 +40,7 @@
     footer i { font-size:20px; cursor:pointer; }
     body.light-theme footer { background:#f5f5f5; border-color:#ccc; }
 
-    /* Modal Styles */
-    #modal, #notifModal, #semPopup, #customPopup {
+    #modal, #notifModal, #semPopup, #customPopup, #comingSoonPopup {
       display:none;
       position:fixed;
       top:0; left:0;
@@ -53,7 +52,7 @@
       animation: fadeIn 0.3s ease;
     }
 
-    .modal-content, .sem-box, .custom-box {
+    .modal-content, .sem-box, .custom-box, .coming-box {
       background:#fff;
       color:#000;
       padding:20px;
@@ -155,19 +154,19 @@
     <div class="section">
       <div class="section-title">Results & Analysis</div>
       <div class="grid">
-        <div class="grid-item" onclick="showModal('Result History')">Results</div>
-        <div class="grid-item" onclick="showModal('Subject Wise Performance')">Subject Analysis</div>
-        <div class="grid-item" onclick="showModal('Calculate CGPA')">CGPA Calculator</div>
-        <div class="grid-item" onclick="showModal('Student Polls')">Poll Results</div>
+        <div class="grid-item" onclick="showModal('Results')">Results</div>
+        <div class="grid-item" onclick="showModal('Subject Analysis')">Subject Analysis</div>
+        <div class="grid-item" onclick="showModal('CGPA Calculator')">CGPA Calculator</div>
+        <div class="grid-item" onclick="showModal('Poll Results')">Poll Results</div>
       </div>
     </div>
 
     <div class="section">
       <div class="section-title">Academic Calendar & Timetables</div>
       <div class="grid">
-        <div class="grid-item" onclick="showModal('Academic Year Schedule')">Academic Calendar</div>
-        <div class="grid-item" onclick="showModal('Exam Schedule')">Exam Timetable</div>
-        <div class="grid-item" onclick="showModal('Class Routine')">Class Timetable</div>
+        <div class="grid-item" onclick="showModal('Academic Calendar')">Academic Calendar</div>
+        <div class="grid-item" onclick="showModal('Exam Timetable')">Exam Timetable</div>
+        <div class="grid-item" onclick="showModal('Class Timetable')">Class Timetable</div>
       </div>
     </div>
 
@@ -193,23 +192,8 @@
   <div id="modal"><div class="modal-content"><span class="close-btn" onclick="closePopup(this)">×</span><div id="modalContent"></div></div></div>
   <div id="notifModal"><div class="modal-content"><span class="close-btn" onclick="closePopup(this)">×</span>No notifications yet</div></div>
   <div id="semPopup"><div class="sem-box"><span class="close-btn" onclick="closePopup(this)">×</span><h3 id="popupSem">Materials Available</h3><button onclick="openDrive()">Continue</button></div></div>
-
-  <div id="customPopup">
-    <div class="custom-box">
-      <span class="close-btn" onclick="closePopup(this)">×</span>
-      <h3>Select Semester</h3>
-      <select id="customSelect">
-        <option disabled selected>Select Semester</option>
-        <option>1st Sem</option><option>2nd Sem</option><option>3rd Sem</option><option>4th Sem</option>
-        <option>5th Sem</option><option>6th Sem</option><option>7th Sem</option><option>8th Sem</option>
-      </select>
-      <button onclick="proceedNext()">Next</button>
-      <div id="customConfirm" style="display:none; margin-top:10px;">
-        <p>Yes, materials available</p>
-        <button onclick="goToDrive()">Continue</button>
-      </div>
-    </div>
-  </div>
+  <div id="customPopup"><div class="custom-box"><span class="close-btn" onclick="closePopup(this)">×</span><h3>Select Semester</h3><select id="customSelect"><option disabled selected>Select Semester</option><option>1st Sem</option><option>2nd Sem</option><option>3rd Sem</option><option>4th Sem</option><option>5th Sem</option><option>6th Sem</option><option>7th Sem</option><option>8th Sem</option></select><button onclick="proceedNext()">Next</button><div id="customConfirm" style="display:none; margin-top:10px;"><p>Yes, materials available</p><button onclick="goToDrive()">Continue</button></div></div></div>
+  <div id="comingSoonPopup"><div class="coming-box"><h3>Coming Soon</h3><p style="margin-top:10px;">This feature is under development.</p><button onclick="document.getElementById('comingSoonPopup').style.display='none'">OK</button></div></div>
 
   <script>
     const driveLinks = {
@@ -236,8 +220,13 @@
     }
 
     function showModal(content) {
-      document.getElementById('modalContent').innerText = content;
-      document.getElementById('modal').style.display = 'flex';
+      const comingSoonItems = ['Results', 'Subject Analysis', 'CGPA Calculator', 'Poll Results'];
+      if (comingSoonItems.includes(content)) {
+        document.getElementById('comingSoonPopup').style.display = 'flex';
+      } else {
+        document.getElementById('modalContent').innerText = content;
+        document.getElementById('modal').style.display = 'flex';
+      }
     }
 
     function showNotif() {
