--- a/home.html
+++ b/home.html
@@ -206,7 +206,7 @@
       '6th Sem': 'https://drive.google.com/drive/folders/1-RUOQojYTxaTYIhdhN45iTTf5MoNWwnD?usp=drive_link',
       '7th Sem': 'https://drive.google.com/file/d/1nOC-CwUUNSpDC8YuJXgEwL9wiTbM-sk7/view?usp=drive_link',
       '8th Sem': 'https://drive.google.com/file/d/1nOC-CwUUNSpDC8YuJXgEwL9wiTbM-sk7/view?usp=drive_link',
-      'Academic Calendar': 'https://drive.google.com/drive/folders/1acddummyExampleLink',
+      'Academic Calendar': 'https://drive.google.com/file/d/1P6dSeQmXZZngWS8XgWBIktZEa3ylp4en/view?usp=drive_link',
       'Class Timetable': 'https://drive.google.com/file/d/1nOC-CwUUNSpDC8YuJXgEwL9wiTbM-sk7/view?usp=drive_link'
     };
     let currentSem = '';
